Fixed toggle-btn alignment

--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,9 @@
     display: table;
     
   }
+  .input-btn{
+    z-index: 5;
+  }
   @media (max-width: 425px) {
     .input-group {
       width: 300px;
